--- a/css/components/_footer.css
+++ b/css/components/_footer.css
@@ -1,4 +1,3 @@
-
 /*****************************************/
 /**************** Footer *****************/
 /*****************************************/
@@ -7,39 +6,6 @@
   background-color: var(--footer-bg-color);
 }
 
-.footer__container {
-  display: grid;
-  grid-template-columns: 5fr 1fr 3fr 3fr;
-  grid-template-rows: auto;
-  grid-template-areas:
-    "title spacer links description"
-    "title spacer links description"
-    "socialIcons spacer links description";
-}
-
-.footer-title-container {
-  grid-area: title;
-}
-
-.footer-social-icons {
-  grid-area: socialIcons;
-}
-
-.footer-spacer {
-  grid-area: spacer;
-}
-
-.footer-navigation {
-  grid-area: links;
-}
-
-.footer-logo {
-  grid-area: logo;
-}
-
-.footer-description {
-  grid-area: description;
-}
 
 .footer-title-container img {
   max-width: 250px;
@@ -97,16 +63,6 @@
 
 
 @media (max-width: 1024px) {
-  .footer__container {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    grid-template-areas:
-      "title"
-      "links"
-      "description"
-      "socialIcons";
-  }
-
   .footer-title-container {
     padding: 0 100px;
   }
@@ -119,10 +75,10 @@
     text-align: center;
   }
 
-  .footer-navigation {
+  /* .footer-navigation {
     padding-top: 100px;
     padding-bottom: 90px;
-  }
+  } */
  
   .footer-fine-print {
     flex-direction: column;
@@ -139,15 +95,6 @@
 }
 
 @media (max-width: 700px) {
-  .footer__container {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    grid-template-areas:
-      "title"
-      "links"
-      "description"
-      "socialIcons";
-  }
 
   .footer-title-container {
     padding: 0;
