--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -2,9 +2,9 @@
   templateType: global_partial
   label: Footer
 -->
-<footer class="footer text-white py-10 px-4 relative">
+<footer class="footer text-white py-10 px-4 relative bg-black">
 
-  <div class="footer__container m-[0_auto] max-w-[1520px]">
+  <div class="footer__container m-[0_auto] max-w-[1520px] grid grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-2">
 
     <div class="footer-title-container">
       {% module 'Footer Logo'
@@ -26,8 +26,6 @@
       </div>
 
     </div>
-
-    <div class="footer-spacer"></div>
 
     <div class="footer-navigation">
       {% module 'Footer navigation'
