Add Hero image to Spa Baths page Template

--- a/templates/spa-baths.html
+++ b/templates/spa-baths.html
@@ -13,16 +13,14 @@
 	  class='body-container body-container--home'
 	%}
 
-	  {% include_dnd_partial
-	    path='../sections/header-2.html',
+    {% include_dnd_partial
+	    path='../sections/hero-2.html',
 	    context={
-			  'custom_section_classes': 'px-4 pt-[140px] pb-4 text-center',
-	      'title': '<h1>Spa kade</h1>',
-        'subtitle': ' 
-          <p class="font-normal lg:text-base">
-            Umirujući efekat tople vode i terapeutsko dejstvo masaže mogu značajno pomoći u ublažavanju i otklanjanju napetosti i stresa. Prilikom kupovine spa kade važno je odlučiti se za pouzdan brend i odabrati model koji dimenzijama i opremljenošću odgovara raspoloživom prostoru i potrebama. 
-          </p>
-          <a class="button-secondary flex justify-self-center mt-2" href="/">Pogledajte kompletnu ponudu</a>
+        'backgroundImage': 'https://atsistem.rs/hs-fs/hubfs/Lady%20in%20Spa.jpg?width=2000&height=888.1944444444443',
+			  'html': '
+          <h1 class="hero-title">Spa kade</h1>
+          <p class="hero-subtitle">Umirujući efekat tople vode i terapeutsko dejstvo masaže mogu značajno pomoći u ublažavanju i otklanjanju napetosti i stresa. Prilikom kupovine spa kade važno je odlučiti se za pouzdan brend i odabrati model koji dimenzijama i opremljenošću odgovara raspoloživom prostoru i potrebama.</p>
+          <a class="button-secondary flex mt-2" href="https://shop.atsistem.rs/sr/collections/spa-kade">Pogledajte kompletnu ponudu</a>
         '
 	    }
 	  %}
