Edit Spa Baths Page Template Content, remove console logs

--- a/templates/spa-baths.html
+++ b/templates/spa-baths.html
@@ -19,7 +19,9 @@
         'backgroundImage': 'https://atsistem.rs/hs-fs/hubfs/Lady%20in%20Spa.jpg?width=2000&height=888.1944444444443',
 			  'html': '
           <h1 class="hero-title">Spa kade</h1>
-          <p class="hero-subtitle">Umirujući efekat tople vode i terapeutsko dejstvo masaže mogu značajno pomoći u ublažavanju i otklanjanju napetosti i stresa. Prilikom kupovine spa kade važno je odlučiti se za pouzdan brend i odabrati model koji dimenzijama i opremljenošću odgovara raspoloživom prostoru i potrebama.</p>
+          <p class="hero-subtitle">
+            Umirujući efekat tople vode i terapeutsko dejstvo masaže mogu značajno pomoći u ublažavanju i otklanjanju napetosti i stresa. 
+            Prilikom kupovine spa kade važno je odlučiti se za pouzdan brend i odabrati model koji dimenzijama i opremljenošću odgovara raspoloživom prostoru i potrebama.</p>
           <a class="button-secondary flex mt-2" href="https://shop.atsistem.rs/sr/collections/spa-kade">Pogledajte kompletnu ponudu</a>
         '
 	    }
@@ -42,10 +44,9 @@
                   Nudimo odličan asortiman vodećeg francuskog brenda POSEIDON SPA, koji uključuje raznovrstan izbor ergonomskih,
                   izdržljivih i sjajno opremljenih modela, predviđenih za spoljašnju ili unutrašnju instalaciju. Ove hidraulične kade mogu
                   primiti od dve do sedam osoba, i opremljene su komfornim mestima za sedenje i ležanje, različličitim masažnim mlaznicama
-                  i efikasnim sistemom za dezinfekciju.
+                  i efikasnim sistemom za dezinfekciju. Uživajte u <a class="underline" href="https://shop.atsistem.rs/sr/collections/komercijalne-spa-kade">hidromasažnim kadama za javni prostor</a> i svaki dom i efektima koji poboljšavaju relaksaciju i raspoloženje.
                 </p>
                 <p class="mb-1">
-                  U zavisnosti od izabranog modela možete uživati u dodatnim efektima koji će poboljšati vašu relaksaciju i raspoloženje.
                   AROMA TERAPIJA je terapija mirisnim aromama biljaka. Esencijalna ulja stimulišu autonomni nervni sistem, redukuju stres,
                   anksioznost, i poboljšavaju san.
                 </p>
@@ -64,12 +65,12 @@
 			path='../sections/image-with-text.html',
       context={
         'image_field': {
-          "src": "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/pexels-max-vakhtbovych-7587466%201.jpg",
-          "alt": "pexels-max-vakhtbovych-7587466 1",
+          "src": "https://shop.atsistem.rs/cdn/shop/files/RHEA.png?v=1713533268",
+          "alt": "Hidromasažna spa kada Rhea",
           "size_type": "auto",
           "width": 725,
           "height": 500,
-          "loading": "eager",
+          "loading": "lazy",
           "max_width": 725,
           "max_height": 500
         },
@@ -81,7 +82,7 @@
         'link': {
           "url": {
             "type": "EXTERNAL",
-            "href": "https://www.google.com/",
+            "href": "https://shop.atsistem.rs/sr/products/spa-kada-rhea",
             "content_id": null
           },
           "open_in_new_tab": false,
@@ -94,12 +95,12 @@
 			path='../sections/image-with-text.html',
       context={
         'image_field': {
-          "src": "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/pexels-max-vakhtbovych-7587466%201.jpg",
-          "alt": "pexels-max-vakhtbovych-7587466 1",
+          "src": "https://shop.atsistem.rs/cdn/shop/files/CHRONOS.png?v=1713533477",
+          "alt": "Hidromasažna spa kada Cronos",
           "size_type": "auto",
           "width": 725,
           "height": 500,
-          "loading": "eager",
+          "loading": "lazy",
           "max_width": 725,
           "max_height": 500
         },
@@ -111,7 +112,7 @@
         'link': {
           "url": {
             "type": "EXTERNAL",
-            "href": "https://www.google.com/",
+            "href": "https://shop.atsistem.rs/sr/products/spa-kada-cronos",
             "content_id": null
           },
           "open_in_new_tab": false,
@@ -125,12 +126,12 @@
 			path='../sections/image-with-text.html',
       context={
         'image_field': {
-          "src": "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/pexels-max-vakhtbovych-7587466%201.jpg",
-          "alt": "pexels-max-vakhtbovych-7587466 1",
+          "src": "https://shop.atsistem.rs/cdn/shop/files/APHRODITE.png?v=1713535080",
+          "alt": "Hidromasažna spa kada Aphrodite",
           "size_type": "auto",
           "width": 725,
           "height": 500,
-          "loading": "eager",
+          "loading": "lazy",
           "max_width": 725,
           "max_height": 500
         },
@@ -142,7 +143,7 @@
         'link': {
           "url": {
             "type": "EXTERNAL",
-            "href": "https://www.google.com/",
+            "href": "https://shop.atsistem.rs/sr/products/spa-kada-aphrodite",
             "content_id": null
           },
           "open_in_new_tab": false,
@@ -155,12 +156,12 @@
 			path='../sections/image-with-text.html',
       context={
         'image_field': {
-          "src": "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/pexels-max-vakhtbovych-7587466%201.jpg",
-          "alt": "pexels-max-vakhtbovych-7587466 1",
+          "src": "https://shop.atsistem.rs/cdn/shop/files/ORION.png?v=1742388040",
+          "alt": "Hidromasažna spa kada Orion",
           "size_type": "auto",
           "width": 725,
           "height": 500,
-          "loading": "eager",
+          "loading": "lazy",
           "max_width": 725,
           "max_height": 500
         },
@@ -172,7 +173,7 @@
         'link': {
           "url": {
             "type": "EXTERNAL",
-            "href": "https://www.google.com/",
+            "href": "https://shop.atsistem.rs/sr/products/spa-kada-orion",
             "content_id": null
           },
           "open_in_new_tab": false,
@@ -186,16 +187,16 @@
 			path='../sections/image-w-text-gradient.html',
       context={
         'image_field': {
-          "src": "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/pexels-max-vakhtbovych-7587466%201.jpg",
-          "alt": "pexels-max-vakhtbovych-7587466 1",
+          "src": "https://atsistem.rs/hubfs/Sadrzaj%20-%20Spa%20Kade/Cuve_Neptune.png",
+          "alt": "Swim spa Neptune",
           "size_type": "auto",
           "width": 725,
           "height": 500,
-          "loading": "eager",
+          "loading": "lazy",
           "max_width": 725,
           "max_height": 500
         },
-        'image_fit': 'contain',
+        'image_fit': 'cover',
         'title': 'Swim Spa Neptune',
         'description': 'Ovaj model je veličanstvena kombinacija hidromasažne kade i malog bazena sa tri  moćna "river džeta", za strujanje vode.  Neptun je kao stvoren za sportske entuzijaste. Ima dubinu koja je pogodna za plivanje,  a možete se baviti vodenim aktivnostima i izvoditi intenzivne vežbe. Neptune ima dva mesta za ležanje i može da primi do 5 osoba.',
         'h_tag_choice': 'p',
@@ -203,7 +204,7 @@
         'link': {
           "url": {
             "type": "EXTERNAL",
-            "href": "https://www.google.com/",
+            "href": "https://shop.atsistem.rs/sr/products/swim-spa-neptune",
             "content_id": null
           },
           "open_in_new_tab": false,
@@ -233,7 +234,7 @@
                 <p class="mb-1">
                   Dizajnirane da pruže savršen komfor i omoguće neuporedivo iskustvo masaže, zahvaljujući mnogim, potpuno inovativnim rešenjima.
                 </p>
-                <a class="button-secondary flex justify-self-center mt-2" href="/">Preuzmite brošuru</a>
+                <a class="button-tertiary flex justify-self-center mt-2" href="/">Preuzmite brošuru</a>
               </div>    
             {% end_module_attribute %}
           {% end_dnd_module %}
@@ -250,7 +251,7 @@
           "size_type": "auto",
           "width": 725,
           "height": 500,
-          "loading": "eager",
+          "loading": "lazy",
           "max_width": 725,
           "max_height": 500
         },
