Edit Poseidon spa link in Spa Baths Page Template

--- a/templates/spa-baths.html
+++ b/templates/spa-baths.html
@@ -234,7 +234,7 @@
                 <p class="mb-1">
                   Dizajnirane da pruže savršen komfor i omoguće neuporedivo iskustvo masaže, zahvaljujući mnogim, potpuno inovativnim rešenjima.
                 </p>
-                <a class="button-tertiary flex justify-self-center mt-2" href="/">Preuzmite brošuru</a>
+                <a class="button-tertiary flex justify-self-center mt-2" href="https://shop.atsistem.rs/sr/collections/spa-kade">Pogledajte ponudu</a>
               </div>    
             {% end_module_attribute %}
           {% end_dnd_module %}
